--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "vanilla-ultron-discord-bot",
   "version": "1.0.0",
   "description": "bot project for discord made with vanilla javascript",
-  "main": "index.js",
+  "main": "./src/index.js",
   "author": "David Almeida <contato.davidalmeida@outlook.com>",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
-    "discord.js": "^14.7.1"
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
