✅ Update: email from contributors

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "contributors": [
     {
-      "name": "DAVID ALMEIDA <blank@email.com>",
+      "name": "DAVID ALMEIDA <contato.davidalmeida@outlook.com>",
       "url": "https://github.com/emeraldknight-sp"
     }
   ],
