✅ Update: enviroment variables file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DISCORD_TOKEN: "TOKEN_DISCORD_EXAMPLE"
-PREFIX: "PREFIX_EXAMPLE"
-CLIENT_ID: "STRING_CLIENT_ID_EXAMPLE",
-GUILD_ID: "STRING_GUILD_ID_EXAMPLE",
+DISCORD_TOKEN=TOKEN_DISCORD_EXAMPLE
+WEATHER_TOKEN=TOKEN_WEATHER_EXAMPLE
+PREFIX=PREFIX_EXAMPLE
+CLIENT_ID=STRING_CLIENT_ID_EXAMPLE
+GUILD_ID=STRING_GUILD_ID_EXAMPLE
